--- a/index.html
+++ b/index.html
@@ -1,227 +1,151 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Privacy Policy</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Privacy Policy - Daily Flare</title>
     <style>
       body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         padding: 1em;
+        max-width: 800px;
+        margin: auto;
       }
     </style>
   </head>
   <body>
-    <strong>Privacy Policy</strong>
+    <h1>Privacy Policy</h1>
+
     <p>
-      This privacy policy applies to the Daily Flare app (hereby referred to as
-      "Application") for mobile devices that was created by Süleyman Gökhan
-      Birkin (hereby referred to as "Service Provider") as a Freemium service.
-      This service is intended for use "AS IS".
+      This privacy policy applies to the <strong>Daily Flare</strong> app
+      (hereby referred to as "Application") for mobile devices that was created
+      by <strong>Süleyman Gökhan Birkin</strong> (hereby referred to as "Service
+      Provider") as a Freemium service. This service is intended for use "AS
+      IS".
     </p>
-    <br /><strong>Information Collection and Use</strong>
+
+    <h2>Information Collection and Use</h2>
     <p>
       The Application collects information when you download and use it. This
-      information may include information such as
+      information may include:
     </p>
     <ul>
-      <li>Your device's Internet Protocol address (e.g. IP address)</li>
-      <li>
-        The pages of the Application that you visit, the time and date of your
-        visit, the time spent on those pages
-      </li>
+      <li>Your device's Internet Protocol address (e.g., IP address)</li>
+      <li>Pages visited, time and date of visit, time spent on those pages</li>
       <li>The time spent on the Application</li>
       <li>The operating system you use on your mobile device</li>
     </ul>
-    <p></p>
-    <br />
-    <p style="">
+
+    <h2>Location Data</h2>
+    <p>
       The Application does not gather precise information about the location of
       your mobile device.
     </p>
-    <div style="display: none">
-      <p>
-        The Application collects your device's location, which helps the Service
-        Provider determine your approximate geographical location and make use
-        of in below ways:
-      </p>
-      <ul>
-        <li>
-          Geolocation Services: The Service Provider utilizes location data to
-          provide features such as personalized content, relevant
-          recommendations, and location-based services.
-        </li>
-        <li>
-          Analytics and Improvements: Aggregated and anonymized location data
-          helps the Service Provider to analyze user behavior, identify trends,
-          and improve the overall performance and functionality of the
-          Application.
-        </li>
-        <li>
-          Third-Party Services: Periodically, the Service Provider may transmit
-          anonymized location data to external services. These services assist
-          them in enhancing the Application and optimizing their offerings.
-        </li>
-      </ul>
-    </div>
-    <br />
+
+    <h2>Use of Information</h2>
     <p>
-      The Service Provider may use the information you provided to contact you
-      from time to time to provide you with important information, required
-      notices and marketing promotions.
+      The Service Provider may use the information you provide to contact you
+      for important information, required notices, and marketing promotions.
     </p>
-    <br />
+
     <p>
-      For a better experience, while using the Application, the Service Provider
-      may require you to provide us with certain personally identifiable
-      information, including but not limited to Email, userId. The information
-      that the Service Provider request will be retained by them and used as
-      described in this privacy policy.
+      For a better experience, the Service Provider may require you to provide
+      personally identifiable information, including but not limited to email
+      and user ID. This information will be retained and used as described in
+      this Privacy Policy.
     </p>
-    <br /><strong>Third Party Access</strong>
+
+    <h2>Third-Party Access</h2>
     <p>
       Only aggregated, anonymized data is periodically transmitted to external
-      services to aid the Service Provider in improving the Application and
-      their service. The Service Provider may share your information with third
-      parties in the ways that are described in this privacy statement.
-    </p>
-    <div>
-      <br />
-      <p>
-        Please note that the Application utilizes third-party services that have
-        their own Privacy Policy about handling data. Below are the links to the
-        Privacy Policy of the third-party service providers used by the
-        Application:
-      </p>
-      <ul>
-        <li>
-          <a
-            href="https://www.google.com/policies/privacy/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Google Play Services</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://support.google.com/admob/answer/6128543?hl=en"
-            target="_blank"
-            rel="noopener noreferrer"
-            >AdMob</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://firebase.google.com/support/privacy"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Google Analytics for Firebase</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://firebase.google.com/support/privacy/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Firebase Crashlytics</a
-          >
-        </li>
-        <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->
-        <li>
-          <a
-            href="https://www.revenuecat.com/privacy"
-            target="_blank"
-            rel="noopener noreferrer"
-            >RevenueCat</a
-          >
-        </li>
-        <!----><!----><!----><!---->
-      </ul>
-    </div>
-    <br />
-    <p>
-      The Service Provider may disclose User Provided and Automatically
-      Collected Information:
+      services to aid in improving the Application. Below are links to
+      third-party service providers used by the Application:
     </p>
     <ul>
       <li>
-        as required by law, such as to comply with a subpoena, or similar legal
-        process;
+        <a
+          href="https://www.google.com/policies/privacy/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Google Play Services</a
+        >
       </li>
       <li>
-        when they believe in good faith that disclosure is necessary to protect
-        their rights, protect your safety or the safety of others, investigate
-        fraud, or respond to a government request;
+        <a
+          href="https://support.google.com/admob/answer/6128543?hl=en"
+          target="_blank"
+          rel="noopener noreferrer"
+          >AdMob</a
+        >
       </li>
       <li>
-        with their trusted services providers who work on their behalf, do not
-        have an independent use of the information we disclose to them, and have
-        agreed to adhere to the rules set forth in this privacy statement.
+        <a
+          href="https://firebase.google.com/support/privacy"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Google Analytics for Firebase</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.revenuecat.com/privacy"
+          target="_blank"
+          rel="noopener noreferrer"
+          >RevenueCat</a
+        >
       </li>
     </ul>
-    <p></p>
-    <br /><strong>Opt-Out Rights</strong>
+
+    <h2>Data Disclosure</h2>
+    <p>The Service Provider may disclose collected information:</p>
+    <ul>
+      <li>As required by law or legal process</li>
+      <li>To protect their rights, safety, or prevent fraud</li>
+      <li>To trusted service providers working on their behalf</li>
+    </ul>
+
+    <h2>Opt-Out Rights</h2>
     <p>
-      You can stop all collection of information by the Application easily by
-      uninstalling it. You may use the standard uninstall processes as may be
-      available as part of your mobile device or via the mobile application
-      marketplace or network.
+      You can stop all collection of information by uninstalling the
+      Application.
     </p>
-    <br /><strong>Data Retention Policy</strong>
+
+    <h2>Data Retention Policy</h2>
     <p>
-      The Service Provider will retain User Provided data for as long as you use
-      the Application and for a reasonable time thereafter. If you'd like them
-      to delete User Provided Data that you have provided via the Application,
-      please contact them at gokhan@birkinapps.com and they will respond in a
-      reasonable time.
+      The Service Provider retains user-provided data as long as you use the
+      Application. To request data deletion, contact
+      <a href="mailto:gokhan@birkinapps.com">gokhan@birkinapps.com</a>.
     </p>
-    <br /><strong>Children</strong>
+
+    <h2>Children’s Privacy</h2>
     <p>
-      The Service Provider does not use the Application to knowingly solicit
-      data from or market to children under the age of 13.
+      The Service Provider does not knowingly collect data from children under
+      the age of 13. If a child has provided personal information, it will be
+      deleted immediately. Parents or guardians can contact
+      <a href="mailto:gokhan@birkinapps.com">gokhan@birkinapps.com</a> for
+      necessary actions.
     </p>
-    <div>
-      <br />
-      <p>
-        The Application does not address anyone under the age of 13. The Service
-        Provider does not knowingly collect personally identifiable information
-        from children under 13 years of age. In the case the Service Provider
-        discover that a child under 13 has provided personal information, the
-        Service Provider will immediately delete this from their servers. If you
-        are a parent or guardian and you are aware that your child has provided
-        us with personal information, please contact the Service Provider
-        (gokhan@birkinapps.com) so that they will be able to take the necessary
-        actions.
-      </p>
-    </div>
-    <!----><br /><strong>Security</strong>
+
+    <h2>Security</h2>
     <p>
-      The Service Provider is concerned about safeguarding the confidentiality
-      of your information. The Service Provider provides physical, electronic,
-      and procedural safeguards to protect information the Service Provider
-      processes and maintains.
+      The Service Provider implements physical, electronic, and procedural
+      safeguards to protect user data.
     </p>
-    <br /><strong>Changes</strong>
+
+    <h2>Changes to this Policy</h2>
     <p>
-      This Privacy Policy may be updated from time to time for any reason. The
-      Service Provider will notify you of any changes to the Privacy Policy by
-      updating this page with the new Privacy Policy. You are advised to consult
-      this Privacy Policy regularly for any changes, as continued use is deemed
-      approval of all changes.
+      This Privacy Policy may be updated periodically. You are advised to review
+      this page for changes, as continued use of the Application implies
+      acceptance of any modifications.
     </p>
-    <br />
-    <p>This privacy policy is effective as of 2025-01-23</p>
-    <br /><strong>Your Consent</strong>
-    <p>
-      By using the Application, you are consenting to the processing of your
-      information as set forth in this Privacy Policy now and as amended by us.
-    </p>
-    <br /><strong>Contact Us</strong>
+
+    <p><strong>Effective Date:</strong> 2025-01-23</p>
+
+    <h2>Contact Us</h2>
     <p>
       If you have any questions regarding privacy while using the Application,
-      or have questions about the practices, please contact the Service Provider
-      via email at gokhan@birkinapps.com.
+      contact the Service Provider at
+      <a href="mailto:gokhan@birkinapps.com">gokhan@birkinapps.com</a>.
     </p>
-    <hr />
   </body>
 </html>
