--- a/index.html
+++ b/index.html
@@ -3,149 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Daily Flare</title>
+    <title>Daily Flare - Legal</title>
     <style>
       body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        padding: 1em;
+        padding: 2em;
         max-width: 800px;
         margin: auto;
+        text-align: center;
+      }
+      h1 {
+        color: #333;
+      }
+      .link-container {
+        margin-top: 20px;
+      }
+      a {
+        text-decoration: none;
+        color: #007bff;
+        font-size: 18px;
+      }
+      a:hover {
+        text-decoration: underline;
       }
     </style>
   </head>
   <body>
-    <h1>Privacy Policy</h1>
-
+    <h1>Daily Flare - Legal Documents</h1>
     <p>
-      This privacy policy applies to the <strong>Daily Flare</strong> app
-      (hereby referred to as "Application") for mobile devices that was created
-      by <strong>Süleyman Gökhan Birkin</strong> (hereby referred to as "Service
-      Provider") as a Freemium service. This service is intended for use "AS
-      IS".
+      Welcome to the legal section of Daily Flare. Below, you can access our
+      Privacy Policy and Terms & Conditions.
     </p>
 
-    <h2>Information Collection and Use</h2>
-    <p>
-      The Application collects information when you download and use it. This
-      information may include:
-    </p>
-    <ul>
-      <li>Your device's Internet Protocol address (e.g., IP address)</li>
-      <li>Pages visited, time and date of visit, time spent on those pages</li>
-      <li>The time spent on the Application</li>
-      <li>The operating system you use on your mobile device</li>
-    </ul>
+    <div class="link-container">
+      <p><a href="privacy-policy.html">📜 Privacy Policy</a></p>
+      <p><a href="terms-and-conditions.html">📄 Terms & Conditions</a></p>
+    </div>
 
-    <h2>Location Data</h2>
-    <p>
-      The Application does not gather precise information about the location of
-      your mobile device.
-    </p>
-
-    <h2>Use of Information</h2>
-    <p>
-      The Service Provider may use the information you provide to contact you
-      for important information, required notices, and marketing promotions.
-    </p>
-
-    <p>
-      For a better experience, the Service Provider may require you to provide
-      personally identifiable information, including but not limited to email
-      and user ID. This information will be retained and used as described in
-      this Privacy Policy.
-    </p>
-
-    <h2>Third-Party Access</h2>
-    <p>
-      Only aggregated, anonymized data is periodically transmitted to external
-      services to aid in improving the Application. Below are links to
-      third-party service providers used by the Application:
-    </p>
-    <ul>
-      <li>
-        <a
-          href="https://www.google.com/policies/privacy/"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Google Play Services</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://support.google.com/admob/answer/6128543?hl=en"
-          target="_blank"
-          rel="noopener noreferrer"
-          >AdMob</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://firebase.google.com/support/privacy"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Google Analytics for Firebase</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://www.revenuecat.com/privacy"
-          target="_blank"
-          rel="noopener noreferrer"
-          >RevenueCat</a
-        >
-      </li>
-    </ul>
-
-    <h2>Data Disclosure</h2>
-    <p>The Service Provider may disclose collected information:</p>
-    <ul>
-      <li>As required by law or legal process</li>
-      <li>To protect their rights, safety, or prevent fraud</li>
-      <li>To trusted service providers working on their behalf</li>
-    </ul>
-
-    <h2>Opt-Out Rights</h2>
-    <p>
-      You can stop all collection of information by uninstalling the
-      Application.
-    </p>
-
-    <h2>Data Retention Policy</h2>
-    <p>
-      The Service Provider retains user-provided data as long as you use the
-      Application. To request data deletion, contact
-      <a href="mailto:gokhan@birkinapps.com">gokhan@birkinapps.com</a>.
-    </p>
-
-    <h2>Children’s Privacy</h2>
-    <p>
-      The Service Provider does not knowingly collect data from children under
-      the age of 13. If a child has provided personal information, it will be
-      deleted immediately. Parents or guardians can contact
-      <a href="mailto:gokhan@birkinapps.com">gokhan@birkinapps.com</a> for
-      necessary actions.
-    </p>
-
-    <h2>Security</h2>
-    <p>
-      The Service Provider implements physical, electronic, and procedural
-      safeguards to protect user data.
-    </p>
-
-    <h2>Changes to this Policy</h2>
-    <p>
-      This Privacy Policy may be updated periodically. You are advised to review
-      this page for changes, as continued use of the Application implies
-      acceptance of any modifications.
-    </p>
-
-    <p><strong>Effective Date:</strong> 2025-01-23</p>
-
-    <h2>Contact Us</h2>
-    <p>
-      If you have any questions regarding privacy while using the Application,
-      contact the Service Provider at
-      <a href="mailto:gokhan@birkinapps.com">gokhan@birkinapps.com</a>.
-    </p>
+    <footer>
+      <p>&copy; 2025 Daily Flare. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
