Revert terms page filename to terms-and-conditions.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="link-container">
       <p><a href="privacy-policy.html">📜 Privacy Policy</a></p>
-      <p><a href="terms.html">📄 Terms & Conditions</a></p>
+      <p><a href="terms-and-conditions.html">📄 Terms & Conditions</a></p>
     </div>
 
     <footer>
