--- a/index.html
+++ b/index.html
@@ -55,6 +55,37 @@
         background-color: white;
         z-index: 1000;
       }
+      .footer-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 2em;
+        margin-bottom: 2em;
+      }
+
+      .footer-section h3 {
+        color: #333;
+        margin-bottom: 0.5em;
+      }
+
+      .footer-section p {
+        color: #666;
+        line-height: 1.6;
+      }
+
+      .footer-section a {
+        color: #007bff;
+        text-decoration: none;
+      }
+
+      .footer-section a:hover {
+        text-decoration: underline;
+      }
+
+      .footer-bottom {
+        text-align: center;
+        padding-top: 1em;
+        border-top: 1px solid #eee;
+      }
     </style>
   </head>
   <body>
@@ -81,7 +112,42 @@
     </div>
 
     <footer>
-      <p data-translate="footer">© 2025 Daily Flare. All rights reserved.</p>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3 data-translate="footer_app_title">Daily Flare</h3>
+          <p data-translate="footer_app_description">
+            Your daily companion for productivity and focus.
+          </p>
+        </div>
+
+        <div class="footer-section">
+          <h3 data-translate="footer_contact_title">Contact</h3>
+          <p>
+            <strong>Süleyman Gökhan Birkin</strong><br />
+            <a href="mailto:gokhan@birkinapps.com">gokhan@birkinapps.com</a
+            ><br />
+            <a href="https://birkinapps.github.io">birkinapps.github.io</a>
+          </p>
+        </div>
+
+        <div class="footer-section">
+          <h3 data-translate="footer_legal_title">Legal</h3>
+          <p>
+            <a href="privacy-policy.html" data-translate="footer_privacy"
+              >Privacy Policy</a
+            ><br />
+            <a href="terms-and-conditions.html" data-translate="footer_terms"
+              >Terms & Conditions</a
+            >
+          </p>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p data-translate="footer_copyright">
+          © 2025 Daily Flare. All rights reserved.
+        </p>
+      </div>
     </footer>
 
     <script src="translations.js"></script>
